--- a/Arrays/2D-Array/CMakeLists.txt
+++ b/Arrays/2D-Array/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(Ques1)
+project(2D_Array)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Ques1 main.cpp)
+add_executable(2D_Array main.cpp)
